/*
 * Copyright 2023, TeamDev. All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Redistribution and use in source and/or binary forms, with or without
 * modification, must retain the above copyright notice and the following
 * disclaimer.
 *
 * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
 * "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
 * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
 * A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
 * OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
 * SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
 * LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
 * DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
 * THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 */

syntax = "proto3";

package spine_examples.shareaware.wallet;

import "spine/options.proto";

option (type_url_prefix) = "type.shareaware.spine.io";
option java_package = "io.spine.examples.shareaware.wallet.event";
option java_outer_classname = "EventsProto";
option java_multiple_files = true;

import "spine/money/money.proto";
import "spine_examples/shareaware/identifiers.proto";

// A new wallet has been created.
message WalletCreated {

    // The ID of the created wallet.
    WalletId wallet = 1;

    // The initial balance of the wallet.
    spine.money.Money balance = 2;
}

// The wallet balance has been recharged.
message BalanceRecharged {

    // The ID of the wallet whose balance was recharged.
    WalletId wallet = 1;

    // The ID of the replenishment process that has invoked balance recharging.
    ReplenishmentId replenishment_process = 2 [(required) = true];

    // The amount of money by which the wallet balance was recharged.
    spine.money.Money money_amount = 3 [(required) = true];
}

// Money has been reserved in the wallet.
message MoneyReserved {
    option (is).java_type = "WithdrawalEvent";

    // The ID of the wallet where money has been reserved.
    WalletId wallet = 1;

    // The ID of the withdrawal process that reserved money.
    WithdrawalId withdrawal_process = 2 [(required) = true];

    // The amount of money that has been reserved.
    spine.money.Money amount = 3 [(required) = true];
}

// The reserved money has been debited.
message ReservedMoneyDebited {
    option (is).java_type = "WithdrawalEvent";

    // The ID of the wallet where reserved money has been debited.
    WalletId wallet = 1;

    // The ID of the withdrawal process that debited the reserved money.
    WithdrawalId withdrawal_process = 2 [(required) = true];

    // The current wallet balance after the reserved money was debited.
    spine.money.Money current_balance = 3 [(required) = true];
}

// The money reservation has been canceled.
message MoneyReservationCanceled {
    option (is).java_type = "WithdrawalEvent";

    // The ID of the wallet where money reservation was canceled.
    WalletId wallet = 1;

    // The ID of the withdrawal process that canceled money reservation.
    WithdrawalId withdrawal_process = 2 [(required) = true];
}
