/*
 * Copyright 2023, TeamDev. All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Redistribution and use in source and/or binary forms, with or without
 * modification, must retain the above copyright notice and the following
 * disclaimer.
 *
 * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
 * "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
 * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
 * A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
 * OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
 * SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
 * LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
 * DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
 * THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 */

syntax = "proto3";

package spine_examples.shareaware.wallet;

import "spine/options.proto";

option (type_url_prefix) = "type.shareaware.spine.io";
option java_package = "io.spine.examples.shareaware.wallet.withdrawalevent";
option java_outer_classname = "EventsProto";
option java_multiple_files = true;

import "spine_examples/shareaware/identifiers.proto";
import "spine_examples/shareaware/wallet/iban.proto";
import "spine/money/money.proto";

// Money has been withdrawn from wallet.
message MoneyWithdrawn {

    // The ID of the successfully finished withdrawal process.
    WithdrawalId withdrawal_process = 1;

    // The ID of the wallet from which money was withdrawn.
    WalletId wallet = 2 [(required) = true];

    // The amount of money that was withdrawn.
    spine.money.Money amount  = 3 [(required) = true];
}

// Money has not been withdrawn from wallet.
message MoneyNotWithdrawn {

    // The ID of the failed withdrawal process.
    WithdrawalId withdrawal_process = 1;

    // Why the money has not been withdrawn.
    string cause = 2;
}
